# mini-task

./: .gitignore  AGENTS.md  RM-AGENTS.md  agent-work-cockpit-execution-handoff.md  agent-work-cockpit-intent-snapshot.md  agent-work-cockpit-party-handoff.md  idea-note.md  idea-pnotes-brief.md  intent-snapshot.md  package-lock.json  package.json  pnotes-brief-execution-handoff.md  pnotes-brief-intent-snapshot.md  project-notes-cli-execution-handoff.md  project-notes-cli-intent-snapshot.md  test.json
.agent/: gsd-file-manifest.json  gsd-install-state.json  settings.json
.antigravitycli/: b6ba220f-dc78-485b-a41e-0a8d0062c17e.json
.codex/: config.toml  gsd-file-manifest.json  gsd-install-state.json  hooks.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.project-notes/: DESIGN.md  PROJECT.md  PROJECT_BRAIN.md  README.md
_harness/: config.yaml
docs/: agent-run-triage-v1-implementation-handoff.md  agent-run-triage-v1-party-minutes.md  user-input.md
logs/: pnotes-debug.jsonl
pnotes-cli/: Cargo.toml
pnotes-cli/src/: main.rs
previews/: project-ops-dashboard-preview.html  project-task-agent-command-center-handoff.md  project-task-agent-command-center-preview.html
public/: app.js  index.html  styles.css
scripts/: check-static-assets.mjs  fake-codex-runner.mjs
src/: runner.mjs  server.mjs  subagents.mjs  taskCockpit.mjs  taskStore.mjs  taskWorker.mjs
tests/: cockpit-e2e.test.mjs  server-api.test.mjs  task-dispatch.test.mjs  ui-static.test.mjs
tmp/: task-management-projects-execution-handoff.md  (+1 more)
(+218 files in other folders)
